会員登録ページスタイル修正

--- a/resources/lang/ja.json
+++ b/resources/lang/ja.json
@@ -1,7 +1,7 @@
 {
-"Login": "ログイン",
-"Logout": "ログアウト",
-"Register": "新規登録",
+"Login": "Login",
+"Logout": "Logout",
+"Register": "登録",
 "Registered User": "会員のお客様",
 "Forgot Your Password?": "パスワードを忘れた場合",
 "Reset Password": "パスワード再設定",
