--- a/resources/lang/ja.json
+++ b/resources/lang/ja.json
@@ -17,6 +17,7 @@
 "Confirm Password": "パスワード(確認用)",
 "Remember Me": "ログイン状態を保存",
 
+"Goods List Page": "商品一覧",
 "Hello!": "ご利用ありがとうございます。",
 "Reset Password Notification":  "パスワード再設定のお知らせ",
 "You are receiving this email because we received a password reset request for your account.": "あなたのアカウントでパスワード再発行のリクエストがありました。",
